<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

class Driver extends Model
{
    protected $fillable = [
        'user_id',
        'first_name',
        'last_name',
        'license_number',
        'contact_number',
        'address',
        'photo',
        'rating',
        'status',
        'tricycle_id',
        'toda_id',
        'availability_status',
        'last_availability_at',
        'last_latitude',
        'last_longitude',
        'last_accuracy_meters',
    ];

    public const AVAILABILITY_OFFLINE = 'OFFLINE';

    public const AVAILABILITY_ONLINE = 'ONLINE';

    protected $casts = [
        'rating' => 'decimal:2',
        'last_availability_at' => 'datetime',
        'last_latitude' => 'decimal:7',
        'last_longitude' => 'decimal:7',
        'last_accuracy_meters' => 'decimal:2',
    ];

    // --- Relationships ---

    public function tricycle()
    {
        return $this->belongsTo(Tricycle::class);
    }

    public function toda()
    {
        return $this->belongsTo(Toda::class);
    }

    public function user()
    {
        return $this->belongsTo(User::class);
    }

    public function bookings()
    {
        return $this->hasMany(Booking::class);
    }

    public function disputes()
    {
        return $this->hasMany(Dispute::class);
    }

    // --- Accessors ---

    public function getFullNameAttribute(): string
    {
        return "{$this->first_name} {$this->last_name}";
    }
}
