// TricyKab (Kabacan Smart Tricycle Dispatch) — schema derived from Laravel migrations.
// Upload to dbdocs.io: install `npm i -g dbdocs`, set DBDOCS_TOKEN, then:
//   dbdocs build database/tricykab.dbml --project tricykab
// Generate token: https://dbdocs.io → account / CLI token

Project TricyKab {
  database_type: "MySQL"
  Note: '''
    Source of truth: SQL database (Laravel migrations under database/migrations).
    Domain docs: PRD_MD_V2.md (repository root).
  '''
}

// --- Laravel framework / infra ---
Table password_reset_tokens {
  email varchar [pk]
  token varchar [not null]
  created_at datetime
}

Table sessions {
  id varchar [pk]
  user_id bigint [null, ref: > users.id, note: 'nullable FK']
  ip_address varchar(45)
  user_agent text
  payload longtext [not null]
  last_activity int [not null]
}

Table cache {
  key varchar [pk]
  value mediumtext [not null]
  expiration int [not null]
}

Table cache_locks {
  key varchar [pk]
  owner varchar [not null]
  expiration int [not null]
}

Table jobs {
  id bigint [pk, increment]
  queue varchar [not null]
  payload longtext [not null]
  attempts tinyint [not null]
  reserved_at int
  available_at int [not null]
  created_at int [not null]
}

Table job_batches {
  id varchar [pk]
  name varchar [not null]
  total_jobs int [not null]
  pending_jobs int [not null]
  failed_jobs int [not null]
  failed_job_ids longtext [not null]
  options mediumtext
  cancelled_at int
  created_at int [not null]
  finished_at int
}

Table failed_jobs {
  id bigint [pk, increment]
  uuid varchar [unique, not null]
  connection text [not null]
  queue text [not null]
  payload longtext [not null]
  exception longtext [not null]
  failed_at datetime [not null]
}

Table personal_access_tokens {
  id bigint [pk, increment]
  tokenable_type varchar [not null]
  tokenable_id bigint [not null]
  name varchar [not null]
  token varchar(64) [unique, not null]
  abilities text
  last_used_at datetime
  expires_at datetime
  Indexes {
    (tokenable_type, tokenable_id) [name: 'personal_access_tokens_tokenable_type_tokenable_id_index']
  }
}

Table idempotency_records {
  id bigint [pk, increment]
  key_hash varchar(128) [unique, not null]
  user_id bigint [null, ref: > users.id]
  method varchar(10) [not null]
  path varchar(255) [not null]
  response_status smallint [not null]
  response_body longtext [not null]
  created_at datetime [not null]
}

// --- Core domain ---
TableGroup core_identity {
  users
  otp_challenges
  todas
}

Table users {
  id bigint [pk, increment]
  name varchar [not null]
  email varchar [unique, not null]
  email_verified_at datetime
  password varchar [not null]
  role varchar [not null, default: 'admin', note: 'admin | driver | passenger']
  phone varchar [unique, note: 'nullable allowed; unique when set']
  status varchar(20) [not null, default: 'ACTIVE']
  fcm_token varchar(255)
  phone_verified_at datetime
  first_name varchar(100)
  last_name varchar(100)
  home_address varchar(255)
  emergency_contact_name varchar(200)
  emergency_contact_phone varchar(32)
  profile_photo_url varchar(500)
  toda_id bigint [ref: > todas.id, note: 'TODA scope for admin/TODA users']
  admin_scope varchar(10)
  remember_token varchar
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table otp_challenges {
  id bigint [pk, increment]
  phone_number varchar(20) [not null]
  role_hint varchar(20)
  otp_hash varchar(255) [not null]
  expires_at datetime [not null]
  verify_attempts tinyint [not null, default: 0]
  resend_count tinyint [not null, default: 0]
  locked_at datetime
  consumed_at datetime
  created_at datetime [not null]
  updated_at datetime [not null]
  Indexes {
    (phone_number, role_hint)
  }
}

Table todas {
  id bigint [pk, increment]
  name varchar [unique, not null]
  area_coverage varchar
  operating_hours varchar
  status varchar [not null, default: 'active']
  created_at datetime [not null]
  updated_at datetime [not null]
}

TableGroup fleet {
  tricycles
  drivers
}

Table tricycles {
  id bigint [pk, increment]
  body_number varchar [unique, not null]
  plate_number varchar [unique, not null]
  toda_id bigint [not null, ref: > todas.id, note: 'cascade on delete']
  make_model varchar
  status varchar [not null, default: 'active']
  registration_status varchar [not null, default: 'ACTIVE']
  capacity tinyint [not null, default: 4]
  created_at datetime [not null]
  updated_at datetime [not null]
  Indexes {
    registration_status [name: 'tricycles_registration_status_index']
  }
}

Table drivers {
  id bigint [pk, increment]
  user_id bigint [unique, ref: - users.id, note: 'one driver profile per user']
  first_name varchar [not null]
  last_name varchar [not null]
  license_number varchar [unique, not null]
  contact_number varchar
  address varchar
  photo varchar
  rating decimal(3,2) [not null, default: 5.00]
  acceptance_rate_snapshot decimal(5,2)
  status varchar [not null, default: 'active']
  availability_status varchar(20) [not null, default: 'OFFLINE']
  last_availability_at datetime
  last_latitude decimal(10,7)
  last_longitude decimal(10,7)
  last_accuracy_meters decimal(10,2)
  tricycle_id bigint [null, ref: > tricycles.id]
  toda_id bigint [null, ref: > todas.id]
  created_at datetime [not null]
  updated_at datetime [not null]
}

TableGroup geography_and_pricing {
  barangays
  standby_points
  fare_matrices
}

Table barangays {
  id bigint [pk, increment]
  name varchar [unique, not null]
  code varchar [unique, not null]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table standby_points {
  id bigint [pk, increment]
  name varchar [not null]
  toda_id bigint [null, ref: > todas.id]
  barangay_id bigint [null, ref: > barangays.id]
  latitude decimal(10,7) [not null]
  longitude decimal(10,7) [not null]
  radius_meters int [not null, default: 50]
  priority_weight decimal(5,2) [not null, default: 1.00]
  status varchar [not null, default: 'ACTIVE']
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table fare_matrices {
  id bigint [pk, increment]
  ride_type varchar [not null, default: 'shared', note: 'shared | special']
  base_fare decimal(8,2) [not null]
  per_km_rate decimal(8,2) [not null]
  multiplier decimal(8,4) [not null, default: 1.0000]
  min_fare decimal(8,2) [not null, default: 0]
  max_fare decimal(8,2) [not null, default: 999999.99]
  minimum_distance decimal(8,2) [not null, default: 2.0]
  discount_percentage decimal(5,2) [not null, default: 20.0]
  per_passenger_addon decimal(8,2) [not null, default: 0]
  rush_hour_surcharge decimal(8,2) [not null, default: 0]
  night_diff_percentage decimal(5,2) [not null, default: 0]
  effective_date date [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
}

TableGroup bookings_and_dispatch {
  bookings
  booking_dispatch_attempts
  booking_dispatch_candidates
  trips
  trip_passenger_events
  trip_location_logs
  payments
  receipts
}

Table bookings {
  id bigint [pk, increment]
  booking_reference varchar [unique, not null]
  passenger_id bigint [null, ref: > users.id]
  driver_id bigint [null, ref: > drivers.id]
  tricycle_id bigint [null, ref: > tricycles.id]
  pickup_lat decimal(10,7)
  pickup_lng decimal(10,7)
  pickup_address varchar
  pickup_notes text
  destination_lat decimal(10,7)
  destination_lng decimal(10,7)
  destination_address varchar
  origin_barangay_id bigint [null, ref: > barangays.id]
  destination_barangay_id bigint [null, ref: > barangays.id]
  ride_type varchar [not null, default: 'shared']
  status varchar [not null, default: 'CREATED']
  fare_amount decimal(8,2)
  distance_km decimal(8,2)
  accepted_at datetime
  started_at datetime
  completed_at datetime
  cancelled_at datetime
  cancellation_reason varchar
  passenger_ack_pickup_at datetime
  passenger_ack_dropoff_at datetime
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table booking_dispatch_attempts {
  id bigint [pk, increment]
  booking_id bigint [not null, ref: > bookings.id, note: 'cascade on delete']
  attempt_no int [not null]
  search_radius_meters int [not null]
  broadcast_started_at datetime [not null]
  broadcast_expires_at datetime [not null]
  candidate_count int [not null, default: 0]
  winner_driver_id bigint [null, ref: > drivers.id]
  status varchar(20) [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
  Indexes {
    (booking_id, attempt_no) [unique]
  }
}

Table booking_dispatch_candidates {
  id bigint [pk, increment]
  dispatch_attempt_id bigint [not null, ref: > booking_dispatch_attempts.id, note: 'cascade']
  driver_id bigint [not null, ref: > drivers.id, note: 'cascade']
  rank_order int [not null]
  distance_meters int [not null]
  standby_score decimal(8,4) [not null]
  fairness_score decimal(8,4) [not null]
  total_score decimal(10,4) [not null]
  response_status varchar(20) [not null, default: 'PENDING']
  responded_at datetime
  decline_reason_code varchar(64)
  created_at datetime [not null]
  updated_at datetime [not null]
  Indexes {
    (dispatch_attempt_id, driver_id) [unique]
  }
}

Table trips {
  id bigint [pk, increment]
  booking_id bigint [unique, not null, ref: - bookings.id, note: 'one trip per booking']
  driver_id bigint [not null, ref: > drivers.id]
  passenger_id bigint [not null, ref: > users.id]
  trip_status varchar(30) [not null]
  started_at datetime
  ended_at datetime
  start_latitude decimal(10,7)
  start_longitude decimal(10,7)
  end_latitude decimal(10,7)
  end_longitude decimal(10,7)
  computed_distance_meters int
  computed_duration_seconds int
  passenger_count tinyint [not null, default: 1]
  detour_seconds_over_initial_eta int
  gps_quality_status varchar(20) [not null, default: 'NORMAL']
  rating tinyint
  rated_at datetime
  end_method varchar(20)
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table trip_passenger_events {
  id bigint [pk, increment]
  trip_id bigint [not null, ref: > trips.id]
  event_type varchar(30) [not null]
  quantity tinyint [not null]
  notes varchar(255)
  recorded_by_driver_id bigint [not null, ref: > drivers.id]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table trip_location_logs {
  id bigint [pk, increment]
  trip_id bigint [not null, ref: > trips.id]
  driver_id bigint [not null, ref: > drivers.id]
  latitude decimal(10,7) [not null]
  longitude decimal(10,7) [not null]
  accuracy_meters decimal(10,2)
  speed_mps decimal(8,2)
  heading_degrees decimal(8,2)
  captured_at datetime [not null]
  source varchar(20) [not null, default: 'DRIVER_APP']
  created_at datetime [not null]
  updated_at datetime [not null]
  Indexes {
    (trip_id, captured_at)
  }
}

Table payments {
  id bigint [pk, increment]
  booking_id bigint [unique, not null, ref: - bookings.id, note: 'cascade on delete']
  method varchar [not null, default: 'CASH']
  amount decimal(8,2) [not null]
  transaction_id varchar
  status varchar [not null, default: 'COMPLETED']
  currency char(3) [not null, default: 'PHP']
  paid_at datetime
  recorded_by_role varchar(20)
  notes varchar(500)
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table receipts {
  id bigint [pk, increment]
  booking_id bigint [unique, not null, ref: - bookings.id]
  receipt_number varchar(50) [unique, not null]
  receipt_payload_json json [not null]
  generated_at datetime [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
}

TableGroup compliance_and_safety {
  disputes
  sos_alerts
  audit_logs
}

Table disputes {
  id bigint [pk, increment]
  booking_id bigint [null, ref: > bookings.id]
  driver_id bigint [null, ref: > drivers.id]
  reported_by_role varchar [not null]
  reported_by_name varchar
  dispute_type varchar [not null]
  description text [not null]
  status varchar [not null, default: 'OPEN']
  resolution_notes text
  resolved_by_admin_id bigint [null, ref: > users.id]
  resolved_at datetime
  created_at datetime [not null]
  updated_at datetime [not null]
  Indexes {
    (status, created_at)
    (driver_id, status)
  }
}

Table sos_alerts {
  id bigint [pk, increment]
  booking_id bigint [null, ref: > bookings.id]
  trip_id bigint [null, ref: > trips.id]
  passenger_id bigint [null, ref: > users.id]
  passenger_name varchar
  reporter_role varchar(20) [default: 'PASSENGER']
  driver_id bigint [null, ref: > drivers.id]
  driver_name varchar
  latitude decimal(10,7)
  longitude decimal(10,7)
  location_note varchar
  status varchar [not null, default: 'OPEN']
  acknowledged_by_admin_id bigint [null, ref: > users.id]
  acknowledged_at datetime
  closed_by_admin_id bigint [null, ref: > users.id]
  closed_at datetime
  created_at datetime [not null]
  updated_at datetime [not null]
  Indexes {
    (status, created_at)
  }
}

Table audit_logs {
  id bigint [pk, increment]
  actor_user_id bigint [null, ref: > users.id]
  actor_type varchar [not null, default: 'USER']
  actor_name varchar
  object_type varchar [not null]
  object_id bigint
  action varchar [not null]
  previous_state_json json
  new_state_json json
  target_fields json
  reason text
  ip_address varchar
  user_agent varchar
  created_at datetime [not null]
  updated_at datetime [not null]
  Indexes {
    (object_type, object_id)
    (action, created_at)
  }
}
